# itq-tool

./: .gitignore  CMakeLists.txt  readme.md
itq/: itq  itq.c
modplug/src/: Makefile.am  codec.h  codec_vorbis.c  load_itq.cpp  modplug.cpp  modplug.h
modplug/src/libmodplug/: sndfile.h
src/: Makefile.in  codec_vorbis.c  itq.c  load_itq.cpp  modplug.cpp  modplug.h
src/libmodplug/: it_defs.h  sndfile.h  stdafx.h
